Fixed text alignment in contact graph

--- a/Beagle_html/Beagle/src/styles/ContactGraph.scss
+++ b/Beagle_html/Beagle/src/styles/ContactGraph.scss
@@ -261,7 +261,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
-        vertical-align: middle;
+        vertical-align: bottom;
         text-anchor: middle;
       }
 
